--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,14 +7,34 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8"/>
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
-    <body style="background-color: bisque; font-family: sans-serif">
-        <a href="ejemplo3.html">&triangleleft;</a>
-        <a href="ejemplo2.html">&triangleright;</a>
-        <h1 style="text-align: center;background-color: #0067bd; color: white">Su Tienda en Línea</h1>
-        <h2>Uso de etiquetas básicas</h2>
-        <p>Lorem <strong>ipsum dolor sit</strong> amet, consectetur adipiscing elit, orci nec pharetra. Cubilia auctor posuere ridiculus massa lacus cursus fusce habitasse, urna dictumst tristique lobortis nostra etiam pretium lectus, sociis tempor ac orci pellentesque gravida primis. Tempus leo felis ut tempor nibh, inceptos vitae proin class in curae, nisl phasellus suspendisse magna. Quisque hendrerit interdum facilisi torquent nascetur felis vivamus, justo enim malesuada semper tempus fringilla nam quis, condimentum porttitor ac praesent ligula scelerisque.</p>
-        <p>Posuere <u>vivamus auctor convallis</u> cum vitae fermentum consequat aptent aliquam porttitor torquent, nascetur tempor pulvinar donec ullamcorper nam ante dapibus bibendum. Tortor cras cubilia sociis laoreet dis bibendum donec netus eros, suspendisse torquent quam lectus phasellus iaculis nibh senectus, egestas scelerisque dapibus turpis nostra molestie nunc volutpat. Senectus himenaeos penatibus tortor elementum sagittis venenatis nisi nascetur porta, molestie ac tempor nunc vestibulum sed tempus semper fames, iaculis egestas suspendisse luctus mus mi nam sociosqu.</p>
-        <p>Hendrerit <i>montes metus nunc</i> erat netus aenean pretium sodales quam ornare nostra, nec rhoncus auctor fames fusce accumsan per ut cursus. Ultrices augue blandit consequat magna ac nisi phasellus justo tincidunt mauris, nullam maecenas fusce vivamus risus laoreet sociosqu class vehicula suspendisse, per dignissim netus proin tempus sapien euismod porta felis. Arcu mollis semper vel ante cras libero morbi nam varius malesuada sodales, aenean vulputate non inceptos neque feugiat auctor quis sapien.</p>
+    <body>
+        <header>
+            <nav class="navegacion">
+                <a class="nav-link logo" href="index.html">TechShop</a>
+                <ul class ="nav-menu">
+                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="ejemplo2.html">Ejemplo 2</a> </li>
+                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="ejemplo3.html">Ejemplo 3</a> </li>
+                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="audio.html">Audios</a></li>
+                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="video.html">Videos</a></li>
+                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="iframe.html">iFrames</a></li>
+                </ul>
+            </nav>
+        </header>
+        <aside>
+            <h1>Su Tienda en Línea</h1>
+            <h2>Uso de etiquetas básicas</h2>        
+        </aside>
+        <section>
+            <h2>Saludos</h2>
+            <p>Lorem <strong>ipsum dolor sit</strong> amet, consectetur adipiscing elit, orci nec pharetra. Cubilia auctor posuere ridiculus massa lacus cursus fusce habitasse, urna dictumst tristique lobortis nostra etiam pretium lectus, sociis tempor ac orci pellentesque gravida primis. Tempus leo felis ut tempor nibh, inceptos vitae proin class in curae, nisl phasellus suspendisse magna. Quisque hendrerit interdum facilisi torquent nascetur felis vivamus, justo enim malesuada semper tempus fringilla nam quis, condimentum porttitor ac praesent ligula scelerisque.</p>
+            <p>Posuere <u>vivamus auctor convallis</u> cum vitae fermentum consequat aptent aliquam porttitor torquent, nascetur tempor pulvinar donec ullamcorper nam ante dapibus bibendum. Tortor cras cubilia sociis laoreet dis bibendum donec netus eros, suspendisse torquent quam lectus phasellus iaculis nibh senectus, egestas scelerisque dapibus turpis nostra molestie nunc volutpat. Senectus himenaeos penatibus tortor elementum sagittis venenatis nisi nascetur porta, molestie ac tempor nunc vestibulum sed tempus semper fames, iaculis egestas suspendisse luctus mus mi nam sociosqu.</p>
+            <p>Hendrerit <i>montes metus nunc</i> erat netus aenean pretium sodales quam ornare nostra, nec rhoncus auctor fames fusce accumsan per ut cursus. Ultrices augue blandit consequat magna ac nisi phasellus justo tincidunt mauris, nullam maecenas fusce vivamus risus laoreet sociosqu class vehicula suspendisse, per dignissim netus proin tempus sapien euismod porta felis. Arcu mollis semper vel ante cras libero morbi nam varius malesuada sodales, aenean vulputate non inceptos neque feugiat auctor quis sapien.</p>           
+        </section>
+        <footer>
+            TechShop Derechos Reservados 2024 &COPY;
+        </footer>
+
     </body>
 </html>
