--- a/src/main/resources/static/ejemplo3.html
+++ b/src/main/resources/static/ejemplo3.html
@@ -7,31 +7,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8"/>
-        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
-    <body>
-        <header>
-            <nav class="navegacion">
-                <a class="nav-link logo" href="index.html">TechShop</a>
-                <ul class ="nav-menu">
-                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="ejemplo2.html">Ejemplo 2</a> </li>
-                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="ejemplo3.html">Ejemplo 3</a> </li>
-                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="audio.html">Audios</a></li>
-                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="video.html">Videos</a></li>
-                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="iframe.html">iFrames</a></li>
-                </ul>
-            </nav>
-        </header>
-        <aside>
-            <h1>Ejemplo 3</h1>
-            <h2>Uso de Imágenes</h2>
-        </aside>
-        <section>
-            <img src="img/ferrari.jpg" height="200" alt=""/>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ce/Orange_Enzo_Ferrari_%287191948164%29.jpg/1024px-Orange_Enzo_Ferrari_%287191948164%29.jpg" height="200" alt=""/>
-        </section>
-        <footer>
-            TechShop Derechos Reservados 2024 &COPY;
-        </footer>
+    <body style="background-color: bisque; font-family: sans-serif">
+        <a href="ejemplo2.html">&triangleleft;</a>
+        <a href="index.html">&triangleright;</a>
+        <h1 style="text-align: center;background-color: #0067bd; color: white">Ejemplo 3</h1>
+        <h2>Uso de Imágenes</h2>
+        <img src="img/ferrari.jpg" height="200" alt=""/>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ce/Orange_Enzo_Ferrari_%287191948164%29.jpg/1024px-Orange_Enzo_Ferrari_%287191948164%29.jpg" height="200" alt=""/>
     </body>
 </html>
