--- a/src/main/resources/static/ejemplo2.html
+++ b/src/main/resources/static/ejemplo2.html
@@ -7,30 +7,45 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8"/>
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
-    <body style="background-color: bisque; font-family: sans-serif">
-        <a href="index.html">&triangleleft;</a>
-        <a href="ejemplo3.html">&triangleright;</a>
-        <h1 style="text-align: center;background-color: #0067bd; color: white">Ejemplo 2</h1>
-        <h2>Uso de Listas</h2>
-
-        <ul>
-            <li>Café</li>
-            <li>Arroz</li>
-            <li>Azúcar</li>
-            <li>Pan</li>
-            <li>Leche</li>
-            <li>Tortillas</li>            
-        </ul>
-
-        <ol type="i">
-            <li>Café</li>
-            <li>Arroz</li>
-            <li>Azúcar</li>
-            <li>Pan</li>
-            <li>Leche</li>
-            <li>Tortillas</li>            
-        </ol>
-
+    <body>
+        <header>
+            <nav class="navegacion">
+                <a class="nav-link logo" href="index.html">TechShop</a>
+                <ul class="nav-menu">
+                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="ejemplo2.html">Ejemplo N°2</a></li>
+                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="ejemplo3.html">Ejemplo N°3</a></li>
+                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="audio.html">Audios</a></li>
+                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="video.html">Videos</a></li>
+                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="iframe.html">iFrame</a></li>
+                </ul>
+            </nav>         
+        </header>
+        <aside>
+            <h1> Ejemplo 2</h1>
+            <h2>Uso de Listas</h2>    
+        </aside>
+        <section>
+            <ul>
+                <li>Café</li>
+                <li>Arroz</li>
+                <li>Azúcar</li>
+                <li>Pan</li>
+                <li>Leche</li>
+                <li>Tortillas</li>            
+            </ul>
+            <ol type="i">
+                <li>Café</li>
+                <li>Arroz</li>
+                <li>Azúcar</li>
+                <li>Pan</li>
+                <li>Leche</li>
+                <li>Tortillas</li>            
+            </ol>
+        </section>
+        <footer>
+            TechShop Derechos Reservados 2027 &COPY;
+        </footer>
     </body>
 </html>
